--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,82 @@
+appnope @ file:///opt/concourse/worker/volumes/live/4f734db2-9ca8-4d8b-5b29-6ca15b4b4772/volume/appnope_1606859466979/work
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+Bottleneck==1.3.2
+certifi==2021.10.8
+cffi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/croot-2p6q7e2r/cffi_1642701115063/work
+charset-normalizer==2.0.12
+click==8.0.4
+cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
+decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+docker-pycreds==0.4.0
+docopt==0.6.2
+filelock==3.6.0
+fonttools==4.25.0
+gitdb==4.0.9
+GitPython==3.1.27
+huggingface-hub==0.4.0
+idna==3.3
+importlib-metadata==4.11.2
+ipython @ file:///opt/concourse/worker/volumes/live/333da4fb-3db0-439c-4a1b-ee802c44da4f/volume/ipython_1643818165055/work
+jedi @ file:///opt/concourse/worker/volumes/live/c9d2fa99-8bc1-4572-41e7-6beba6391441/volume/jedi_1644315238822/work
+joblib==1.1.0
+kiwisolver @ file:///Users/builder/miniconda3/envs/prefect/conda-bld/kiwisolver_1638569885739/work
+matplotlib @ file:///opt/concourse/worker/volumes/live/0da721da-13cb-462d-69c8-9ee9bb3461fb/volume/matplotlib-suite_1645455704170/work
+matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
+mkl-fft==1.3.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+munkres==1.1.4
 nltk==3.7
-numpy==1.19.2
+numexpr @ file:///opt/concourse/worker/volumes/live/c0c31ee2-1dfc-42ed-4523-49e57dd0d5ef/volume/numexpr_1614798491918/work
+numpy @ file:///opt/concourse/worker/volumes/live/a1b5ea96-b05c-40ba-5dfb-4542ece1c186/volume/numpy_and_numpy_base_1603491228242/work
+packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
 pandas==1.3.4
-sentence_transformers==2.2.0
+parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
+pathtools==0.1.2
+pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow==9.0.1
+pipreqs==0.4.11
+promise==2.3
+prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
+protobuf==3.19.4
+psutil==5.9.0
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pygame==2.1.2
+Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
+pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+pytz==2021.3
+PyYAML==6.0
+regex==2022.3.2
+requests==2.27.1
+sacremoses==0.0.47
+scikit-learn==1.0.2
+scipy @ file:///opt/concourse/worker/volumes/live/cd12a34b-67bb-4e81-5e11-d0d209d4b37d/volume/scipy_1616703203371/work
+seaborn @ file:///tmp/build/80754af9/seaborn_1629307859561/work
+sentence-transformers==2.2.0
+sentencepiece==0.1.96
+sentry-sdk==1.5.7
+setproctitle==1.2.2
+shortuuid==1.0.8
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+smmap==5.0.0
+termcolor==1.1.0
+threadpoolctl==3.1.0
+tokenizers==0.11.6
 torch==1.10.2
-tqdm==4.62.3
+torchinfo==1.6.3
+torchsummary==1.5.1
+torchvision==0.11.3
+tornado @ file:///opt/concourse/worker/volumes/live/d531d395-893c-4ca1-6a5f-717b318eb08c/volume/tornado_1606942307627/work
+tqdm==4.63.0
+traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
+transformers==4.17.0
+typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
+urllib3==1.26.8
+wandb==0.12.11
+wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+yarg==0.1.9
+yaspin==2.1.0
+zipp==3.7.0
